--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
+Imports: jsonlite,
+    curl,
+    dplyr,
+    roxygen2,
+    ggplot2
